exports[`TextLink React component Renders Augmented correctly 1`] = `
<a
  className="textlink"
  href="http://numenta.com"
  onClick={[Function]}
  target="_blank">
  Numenta Homepage
</a>
`;

exports[`TextLink React component Renders Default correctly 1`] = `
<a
  className="textlink"
  href="http://numenta.com"
  onClick={[Function]}
  target={undefined}>
  Numenta Homepage
</a>
`;
